Add -g flag to tmux.conf to avoid error.

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,7 +12,7 @@ bind - \
   swap-pane -s tmux-zoom.0 \;\
   kill-window -t tmux-zoom
 
-set prefix C-a
+set -g prefix C-a
 
 unbind-key C-b
 bind-key C-a send-prefix
