Change tmux default command.

--- a/tmux/1.6/.tmux.conf
+++ b/tmux/1.6/.tmux.conf
@@ -1,4 +1,4 @@
-set-option -g default-command "$SHELL -l"
+set-option -g default-command /bin/bash
 set-option -g update-environment "DISPLAY SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY GEM_HOME GEM_PATH MY_RUBY_HOME PATH"
 
 unbind +
