Modify tmux conf.

--- a/tmux/2.1/.tmux.conf
+++ b/tmux/2.1/.tmux.conf
@@ -1,4 +1,6 @@
-set-option -g default-command "$SHELL -l"
+# Do not think we need the first line after adding the second ...?
+# set-option -g default-command "$SHELL -l"
+set-option -g default-shell "$SHELL -l"
 
 unbind +
 bind + \
