--- a/tmux/1.6/.tmux.conf
+++ b/tmux/1.6/.tmux.conf
@@ -1,5 +1,7 @@
-set-option -g default-command /bin/bash
-set-option -g update-environment "DISPLAY SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY GEM_HOME GEM_PATH MY_RUBY_HOME PATH"
+set-option -g default-command "$SHELL -l"
+set-option -g default-shell "$SHELLl"
+# We try removing this env copy after adding -l to default command
+# set-option -g update-environment "DISPLAY SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY GEM_HOME GEM_PATH MY_RUBY_HOME PATH"
 
 unbind +
 bind + \
